Fix header spacing, add footer

--- a/public/style/global.css
+++ b/public/style/global.css
@@ -27,19 +27,31 @@ header a {
   text-decoration: none;
 }
 
+/* Footer */
+
+footer {
+  display: inline-flex;
+  position: absolute;
+  bottom: 0px;
+  width: 100%;
+  padding-bottom: 16px;
+}
+
+/* Generic Flex */
+
 .left {
-  flex: 1 1 auto;
+  flex-basis: 100%;
   text-align: left;
   padding-left: 16px;
 }
 
 .center {
-  flex: 1 1 auto;
+  flex-basis: 100%;
   text-align: center;
 }
 
 .right {
-  flex: 1 1 auto;
+  flex-basis: 100%;
   text-align: right;
   padding-right: 16px;
 }
